[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/menus/win_menu/win_scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/audio/sounds_effects/win_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/fonts/1-BitFont.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/sprites/player_sprite.png" type="Texture" id=4]
[ext_resource path="res://Assets/sprites/background.png" type="Texture" id=5]
[ext_resource path="res://Assets/sprites/new_transparent.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=9]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.552941 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 4800, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 6000, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 7200, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 8400, 0, 1200, 1200 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 169, 0, 169, 169 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 338, 0, 169, 169 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=19]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 338, 507, 169, 169 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 338, 676, 169, 169 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=24]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=25]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 169, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 338, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 169, 169, 169, 169 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=31]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=32]
size = 60
font_data = ExtResource( 3 )

[node name="win_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 363 )
scale = Vector2( 10.1825, 5.736 )
texture = ExtResource( 5 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 136.0
margin_top = 24.0
margin_right = 1168.0
margin_bottom = 138.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "Level Completed"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 480.0
margin_top = 448.0
margin_right = 744.0
margin_bottom = 497.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Coming Soon!"

[node name="main_menu" type="Button" parent="."]
margin_left = 424.0
margin_top = 600.0
margin_right = 793.0
margin_bottom = 684.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "MAIN MENU"

[node name="next_lvl_button" type="Button" parent="."]
margin_left = 424.0
margin_top = 496.0
margin_right = 793.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Next Level"

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -21.357
autoplay = true

[node name="timeout" type="Timer" parent="."]
one_shot = true

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 192, 568 )
frames = SubResource( 13 )
frame = 4
playing = true

[node name="coin" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.807843, 0, 1 )
position = Vector2( 104, 272 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="coin_counter" type="Label" parent="."]
margin_left = 208.0
margin_top = 200.0
margin_right = 294.0
margin_bottom = 264.0
custom_colors/font_color = Color( 1, 0.807843, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "##"
valign = 1

[node name="line" type="Label" parent="."]
margin_left = 288.0
margin_top = 248.0
margin_right = 335.0
margin_bottom = 311.0
custom_colors/font_color = Color( 1, 0.807843, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "/"
valign = 1

[node name="coin_num" type="Label" parent="."]
margin_left = 328.0
margin_top = 280.0
margin_right = 402.0
margin_bottom = 343.0
custom_colors/font_color = Color( 1, 0.807843, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "23"
valign = 1

[node name="diamond" type="AnimatedSprite" parent="."]
modulate = Color( 0.101961, 1, 0.976471, 1 )
position = Vector2( 536, 272 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 23 )
frame = 1
playing = true

[node name="line2" type="Label" parent="."]
modulate = Color( 0.101961, 1, 0.976471, 1 )
margin_left = 688.0
margin_top = 248.0
margin_right = 735.0
margin_bottom = 309.0
custom_colors/font_color = Color( 0.227451, 0.647059, 0.764706, 1 )
custom_fonts/font = SubResource( 24 )
text = "/"
valign = 1

[node name="diamond_counter" type="Label" parent="."]
modulate = Color( 0.101961, 1, 0.976471, 1 )
margin_left = 624.0
margin_top = 208.0
margin_right = 766.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.227451, 0.647059, 0.764706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "##"
valign = 1

[node name="diamond_num" type="Label" parent="."]
modulate = Color( 0.101961, 1, 0.976471, 1 )
margin_left = 744.0
margin_top = 248.0
margin_right = 791.0
margin_bottom = 359.0
custom_colors/font_color = Color( 0.227451, 0.647059, 0.764706, 1 )
custom_fonts/font = SubResource( 24 )
text = "6"
valign = 1

[node name="gem" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0.423529, 1 )
position = Vector2( 904, 256 )
frames = SubResource( 30 )
frame = 3
playing = true

[node name="line3" type="Label" parent="."]
modulate = Color( 1, 0, 0.423529, 1 )
margin_left = 1088.0
margin_top = 256.0
margin_right = 1135.0
margin_bottom = 319.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 31 )
text = "/"
valign = 1

[node name="gem_counter" type="Label" parent="."]
modulate = Color( 1, 0, 0.423529, 1 )
margin_left = 1000.0
margin_top = 208.0
margin_right = 1086.0
margin_bottom = 272.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
text = "##"
valign = 1

[node name="gem_num" type="Label" parent="."]
modulate = Color( 1, 0, 0.423529, 1 )
margin_left = 1128.0
margin_top = 280.0
margin_right = 1175.0
margin_bottom = 343.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 31 )
text = "4"
valign = 1

[connection signal="pressed" from="main_menu" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="timeout" to="." method="_on_timeout_timeout"]
